--- a/src/main/resources/com/example/zavrsniprojekat/browse-view.fxml
+++ b/src/main/resources/com/example/zavrsniprojekat/browse-view.fxml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="678.0" prefWidth="1157.0" style="-fx-background-color: #43aa8b;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zavrsniprojekat.BrowseController">
+<AnchorPane prefHeight="678.0" prefWidth="1157.0" style="-fx-background-color: #43aa8b;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zavrsniprojekat.BrowseController">
    <children>
       <SplitPane dividerPositions="0.29797979797979796" prefHeight="681.0" prefWidth="891.0">
         <items>
