--- a/src/main/resources/com/example/zavrsniprojekt/browse-view.fxml
+++ b/src/main/resources/com/example/zavrsniprojekt/browse-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="678.0" prefWidth="1157.0" style="-fx-background-color: #43aa8b;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zavrsniprojekat.BrowseController">
+<AnchorPane prefHeight="678.0" prefWidth="1157.0" style="-fx-background-color: #43aa8b;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zavrsniprojekt.BrowseController">
    <children>
       <SplitPane dividerPositions="0.29797979797979796" prefHeight="681.0" prefWidth="891.0">
         <items>
