--- a/src/main/resources/com/example/zavrsniprojekt/main-view.fxml
+++ b/src/main/resources/com/example/zavrsniprojekt/main-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="304.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zavrsniprojekat.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="304.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zavrsniprojekt.MainController">
    <children>
       <Button layoutX="4.0" layoutY="148.0" mnemonicParsing="false" onAction="#onBrowse" prefHeight="40.0" prefWidth="140.0" style="-fx-background-color: #0039a6;" text="ELEMENTI" textFill="WHITE">
          <font>
